--- a/static/websocket.html
+++ b/static/websocket.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <html>
+
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
-</script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
+  </script>
   <script language="javascript" type="text/javascript">
-    $(function() {
+    $(function () {
       var conn = null;
       function log(msg) {
         var control = $('#log');
@@ -14,17 +15,18 @@
       }
       function connect() {
         disconnect();
-        var wsUri = (window.location.protocol=='https:'&&'wss://'||'ws://')+window.location.host + '/ws/';
+        var wsUri = (window.location.protocol == 'https:' && 'wss://' || 'ws://') + window.location.host + '/ws/';
         conn = new WebSocket(wsUri);
         log('Connecting...');
-        conn.onopen = function() {
+        conn.onopen = function () {
           log('Connected.');
+          conn.send("/join 109b7b41-f8eb-4702-abdb-6bfb95f57072");
           update_ui();
         };
-        conn.onmessage = function(e) {
+        conn.onmessage = function (e) {
           log('Received: ' + e.data);
         };
-        conn.onclose = function() {
+        conn.onclose = function () {
           log('Disconnected.');
           conn = null;
           update_ui();
@@ -48,7 +50,7 @@
           $('#connect').html('Disconnect');
         }
       }
-      $('#connect').click(function() {
+      $('#connect').click(function () {
         if (conn == null) {
           connect();
         } else {
@@ -57,34 +59,35 @@
         update_ui();
         return false;
       });
-      $('#send').click(function() {
+      $('#send').click(function () {
         var text = $('#text').val();
         log('Sending: ' + text);
         conn.send(text);
         $('#text').val('').focus();
         return false;
       });
-      $('#text').keyup(function(e) {
+      $('#text').keyup(function (e) {
         if (e.keyCode === 13) {
           $('#send').click();
           return false;
         }
       });
     });
-</script>
+  </script>
 </head>
+
 <body>
-<h3>Chat!</h3>
-<div>
-  <button id="connect">Connect</button>&nbsp;|&nbsp;Status:
-  <span id="status">disconnected</span>
-</div>
-<div id="log"
-     style="width:20em;height:15em;overflow:auto;border:1px solid black">
-</div>
-<form id="chatform" onsubmit="return false;">
-  <input id="text" type="text" />
-  <input id="send" type="button" value="Send" />
-</form>
+  <h3>Chat!</h3>
+  <div>
+    <button id="connect">Connect</button>&nbsp;|&nbsp;Status:
+    <span id="status">disconnected</span>
+  </div>
+  <div id="log" style="width:20em;height:15em;overflow:auto;border:1px solid black">
+  </div>
+  <form id="chatform" onsubmit="return false;">
+    <input id="text" type="text" />
+    <input id="send" type="button" value="Send" />
+  </form>
 </body>
+
 </html>
