--- a/static/websocket.html
+++ b/static/websocket.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
   </script>
   <script language="javascript" type="text/javascript">
     $(function () {
